centering the main container

--- a/src/Files/index.module.css
+++ b/src/Files/index.module.css
@@ -23,7 +23,7 @@
   cursor: pointer;
 }
 
-.fileList {
+.fileContainer {
   background: white;
   border: 1px solid lightgray;
   border-radius: 8px;
