working on addFile function

--- a/src/Files/index.module.css
+++ b/src/Files/index.module.css
@@ -28,6 +28,12 @@
   font-weight: bold;
 }
 
+.sortBtn:hover {
+  color: white;
+
+  background: #29b1cd;
+}
+
 .renameBtn {
   background: #29b1cd;
   color: white;
