setting min-width for when no content exists

--- a/src/Files/index.module.css
+++ b/src/Files/index.module.css
@@ -70,6 +70,7 @@
   padding: 2em 4em;
 
   box-shadow: 0 4px 8px 0 rgba(126, 126, 126, 0.2), 0 6px 20px 0 rgba(126, 126, 126, 0.2);
+  min-width: 300px;
   width: fit-content;
 
   display: grid;
